--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "mobx-utils": "^6.0.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-hook-form": "^7.15.4",
         "react-loader-spinner": "^4.0.0",
         "react-query": "3.23.2",
         "react-redux": "7.2.5",
